// Vitest Snapshot v1

exports[`<ChangePassword /> > should render 1`] = `
<Styled(styled.div)>
  <Styled(styled.div)>
    <h2>
      Password
    </h2>
  </Styled(styled.div)>
  <styled.div
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup>
      <styled.label>
        Old Password
      </styled.label>
      <styled.div>
        <PasswordInput
          name="oldPassword"
          onChange={[Function]}
          value=""
        />
        <styled.p />
      </styled.div>
    </InputGroup>
    <InputGroup>
      <styled.label>
        New password
      </styled.label>
      <styled.div>
        <PasswordInput
          name="newPassword"
          onChange={[Function]}
          value=""
        />
        <styled.p />
      </styled.div>
    </InputGroup>
    <styled.div>
      <span>
        Last changed 
        <RelativeTime
          time="2018-02-14T12:00:00.000000Z"
        />
      </span>
      <SaveButton
        altText="Change"
      />
    </styled.div>
  </styled.div>
</Styled(styled.div)>
`;

exports[`<ChangePassword /> > should render placeholder when [props.ready=false] 1`] = `<LoadingPlaceholder />`;

exports[`<ChangePassword /> > should render with error in props 1`] = `
<Styled(styled.div)>
  <Styled(styled.div)>
    <h2>
      Password
    </h2>
  </Styled(styled.div)>
  <styled.div
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup>
      <styled.label>
        Old Password
      </styled.label>
      <styled.div>
        <PasswordInput
          name="oldPassword"
          onChange={[Function]}
          value=""
        />
        <styled.p>
          existing error
        </styled.p>
      </styled.div>
    </InputGroup>
    <InputGroup>
      <styled.label>
        New password
      </styled.label>
      <styled.div>
        <PasswordInput
          name="newPassword"
          onChange={[Function]}
          value=""
        />
        <styled.p />
      </styled.div>
    </InputGroup>
    <styled.div>
      <span>
        Last changed 
        <RelativeTime
          time="2018-02-14T12:00:00.000000Z"
        />
      </span>
      <SaveButton
        altText="Change"
      />
    </styled.div>
  </styled.div>
</Styled(styled.div)>
`;

exports[`<ChangePassword /> > should show error if submitted old password is empty 1`] = `
<Styled(styled.div)>
  <Styled(styled.div)>
    <h2>
      Password
    </h2>
  </Styled(styled.div)>
  <styled.div
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup>
      <styled.label>
        Old Password
      </styled.label>
      <styled.div>
        <PasswordInput
          name="oldPassword"
          onChange={[Function]}
          value=""
        />
        <styled.p>
          Please provide your old password
        </styled.p>
      </styled.div>
    </InputGroup>
    <InputGroup>
      <styled.label>
        New password
      </styled.label>
      <styled.div>
        <PasswordInput
          name="newPassword"
          onChange={[Function]}
          value="new_password"
        />
        <styled.p />
      </styled.div>
    </InputGroup>
    <styled.div>
      <span>
        Last changed 
        <RelativeTime
          time="2018-02-14T12:00:00.000000Z"
        />
      </span>
      <SaveButton
        altText="Change"
      />
    </styled.div>
  </styled.div>
</Styled(styled.div)>
`;

exports[`<ChangePassword /> > should show error if submitted password is too short 1`] = `
<Styled(styled.div)>
  <Styled(styled.div)>
    <h2>
      Password
    </h2>
  </Styled(styled.div)>
  <styled.div
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup>
      <styled.label>
        Old Password
      </styled.label>
      <styled.div>
        <PasswordInput
          name="oldPassword"
          onChange={[Function]}
          value="old_password"
        />
        <styled.p />
      </styled.div>
    </InputGroup>
    <InputGroup>
      <styled.label>
        New password
      </styled.label>
      <styled.div>
        <PasswordInput
          name="newPassword"
          onChange={[Function]}
          value="short"
        />
        <styled.p>
          Passwords must contain at least 8 characters
        </styled.p>
      </styled.div>
    </InputGroup>
    <styled.div>
      <span>
        Last changed 
        <RelativeTime
          time="2018-02-14T12:00:00.000000Z"
        />
      </span>
      <SaveButton
        altText="Change"
      />
    </styled.div>
  </styled.div>
</Styled(styled.div)>
`;
